<resources>
    <string name="app_name">Dictionary</string>
    <string name="en_to_fa">En To Fa</string>
    <string name="fa_to_en">Fa To En</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fa">Fa</string>
    <string name="en">En</string>
    <string name="word_in_persian">Word In Persian</string>
    <string name="word_in_english">Word In English</string>
    <string name="look_up">Look Up</string>
    <string name="english">English</string>
    <string name="persian">Persian</string>
    <string name="new_word">New Word</string>
    <string name="save">Save</string>
    <string name="share">share</string>
    <string name="search_word_EN">Search Word English</string>
    <string name="search_word_FA">کلمه فارسی برای جستجو</string>
    <string name="persian_search">جستجو</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_word">Delete Word</string>
    <string name="share_word">Share Word</string>
</resources>