<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".control.fragment.EditDeleteWordFragment" >

    <TextView
        android:id="@+id/title_edit_persian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/word_in_persian"
        app:layout_constraintEnd_toStartOf="@id/title_edit_english"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_edit_english"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/search_word_EN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title_edit_persian"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/word_in_persian_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/word_in_persian"
        android:ems="10"
        android:hint="@string/word_in_persian"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@id/word_in_english_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_edit_persian" />

    <EditText
        android:id="@+id/word_in_english_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="@string/word_in_english"
        android:ems="10"
        android:hint="@string/word_in_english"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/word_in_persian_edit"
        app:layout_constraintTop_toBottomOf="@+id/title_edit_english" />

    <Button
        android:id="@+id/save_change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/save_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/delete_word_button"
        app:layout_constraintTop_toBottomOf="@+id/word_in_english_edit" />

    <Button
        android:id="@+id/delete_word_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/delete_word"
        app:layout_constraintEnd_toStartOf="@+id/save_change_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_in_persian_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>